# tauri-idlemonitor

./: .gitignore  Cargo.toml  README.md  RESEARCH.md  api-iife.js  build.rs  package.json
demo-app/: README.md  index.html  package-lock.json  package.json
demo-app/src/: main.ts  styles.css
demo-app/src-tauri/: Cargo.toml  tauri.conf.json  test.rs
demo-app/src-tauri/capabilities/: default.json
demo-app/src-tauri/src/: lib.rs
examples/: minimal.ts  rust-setup.rs  timer-app.ts
guest-js/: index.ts  package.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_idle_time.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  idle.rs  lib.rs
src/platform/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
tauri-plugin-idlemonitor-api/: package-lock.json  package.json
